[gd_scene load_steps=10 format=1]

[ext_resource path="res://Enemies/Spearfischer/Scripts/EnemySpearFischer.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Manmoth/Sprites/hitbox.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Spearfischer/Sprites/spearfischer_00000.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Spearfischer/Sprites/spearfischer_00001.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Spearfischer/Sprites/spearfischer_00002.png" type="Texture" id=5]
[ext_resource path="res://Enemies/Spearfischer/Sprites/spearfischer_00004.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 28.0

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 32, 48 )

[node name="SpearFischer" type="KinematicBody2D"]

input/pickable = false
collision/layers = 0
collision/mask = 0
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="HitBox" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 0, 14 )
texture = ExtResource( 2 )

[node name="Sprites" type="AnimatedSprite" parent="."]

frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="HurtTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="ThrowTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="PlayerCollision" type="StaticBody2D" parent="." groups=[
"enemy",
]]

input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 18 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 2
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Collision" type="CollisionShape2D" parent="PlayerCollision"]

transform/pos = Vector2( 0, 18 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="ArrowCollision" type="StaticBody2D" parent="." groups=[
"enemy",
]]

input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 14.0389 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Collision" type="CollisionShape2D" parent="ArrowCollision"]

transform/pos = Vector2( 0, 14.0389 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0


